made tiny adjustment to app.py for added username jinja variable. also styled up the logout button and text atop it

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
 	</section>
 
 	<!-- Account info -->
-	<section id="account-info">
-	  <header>
-	    <p>Logged in as: {{ username }}</p>
+	<section>
+	  <header class="bold" id="account-info">
+	    <p>Logged in as: <a href="/account">{{ username }}</a></p>
 	  </header>
 	  <div class="align-center">
 	    <a href="/logout" class="button">Log Out</a>
@@ -102,9 +102,9 @@
 	<!-- About -->
 	<section class="blurb">
 	  <h2>About</h2>
-	  <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
+	  <p>Story Builder is a site in which users can create and share stories with the world. It is designed to allow creative writers to go forth and share their ideas and to build interesting, funny or quirky stories with people on the web.</p>
 	  <ul class="actions">
-	    <li><a href="#" class="button">Learn More</a></li>
+	    <li><a href="/about" class="button">Learn More</a></li>
 	  </ul>
 	</section>
 
