Made the front-end page for creating posts and also did some small fixes on the register site. renamed index

--- a/templates/register.html
+++ b/templates/register.html
@@ -44,7 +44,7 @@
 	    
 	  </header>
 	  
-	  <form method="POST" action="/login">
+	  <form method="POST" action="/register">
 	    
 	    <p>Username:<input name="user" type="text"></p>
 	    
