--- a/templates/create.html
+++ b/templates/create.html
@@ -20,9 +20,9 @@
 	<h1><a href="/">Story Builder</a></h1>
 	<nav class="links">
 	  <ul>
-	    <li><a href="#">Your Stories</a></li>
+	    <li><a href="/">Your Stories</a></li>
 	    <li><a href="#">Find Stories</a></li>
-	    <li><a href="#">Create Story</a></li>
+	    <li><a href="/new">Create Story</a></li>
 	  </ul>
 	</nav>
 	<nav class="main">
@@ -40,40 +40,28 @@
       <!-- Main -->
       <div id="main">
 
-	{% for post in postlist %}
 	<!-- Post -->
 	<article class="post">
+
 	  <header>
-	    <div class="title">
-	      <h2><a href="#">{{ post[ 'title' ] }}</a></h2>
-	      <p>{{ post[ 'subtitle' ] }}</p>
-	    </div>
-	    <div class="meta">
-	      <time class="published" datetime="2015-11-01">November 1, 2015</time>
-	      <a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src="static/images/avatar.jpg" alt="" /></a>
-	    </div>
+	      <div class="title">
+		<h2>Create a Story</h2>
+	      </div>
 	  </header>
-	  <a href="#" class="image featured"><img src="static/images/pic01.jpg" alt="" /></a>
-	  <p>{{ post [ 'content' ] }}</p>
+	  <form method="POST" action="/new">
+	    <input type="text" name="title" placeholder="Title" style="padding-bottom: 2e;">
+	    <br>
+	    <input type="text" name="subtitle" placeholder="Sub-title" style="padding-bottom: 2e;">
+	    <br>
+	    <textarea name="post" style="padding-bottom: 2e"></textarea>
+	    <br>
 	  <footer>
 	    <ul class="actions">
-	      <li><a href="#" class="button big">Continue Reading</a></li>
-	    </ul>
-	    <ul class="stats">
-	      <li><a href="#">General</a></li>
-	      <li><a href="#" class="icon fa-heart">28</a></li>
-	      <li><a href="#" class="icon fa-comment">128</a></li>
+	      <li><input type="submit" name="submit" class="button big"></li>
 	    </ul>
 	  </footer>
+	  </form>
 	</article>
-
-	{% endfor %}
-
-	<!-- Pagination -->
-	<ul class="actions pagination">
-	  <li><a href="" class="disabled button big previous">Previous Page</a></li>
-	  <li><a href="#" class="button big next">Next Page</a></li>
-	</ul>
 
       </div>
 
