added js to show menu on mobile

--- a/templates/create.html
+++ b/templates/create.html
@@ -33,9 +33,13 @@
 		<input type="text" name="query" placeholder="Search" />
 	      </form>
 	    </li>
+	    <div id="navmenu"></div>
 	  </ul>
 	</nav>
       </header>
+
+      <!-- Menu on mobile -->
+      <div id="menudiv"></div>
 
       <!-- Main -->
       <div id="main">
@@ -116,6 +120,7 @@
     <script src="static/js/jquery.min.js"></script>
     <script src="static/js/skel.min.js"></script>
     <script src="static/js/util.js"></script>
+    <script src="static/js/mobile.js"></script>
     <!--[if lte IE 8]><script src="static/js/ie/respond.min.js"></script><![endif]-->
     <script src="static/js/main.js"></script>
 
