--- a/templates/sideandnavbar.html
+++ b/templates/sideandnavbar.html
@@ -5,10 +5,10 @@
     <title>Storytime Fun Site</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="static/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="static/css/main.css" />
-    <!--[if lte IE 9]><link rel="stylesheet" href="static/css/ie9.css" /><![endif]-->
-    <!--[if lte IE 8]><link rel="stylesheet" href="static/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 8]><script src="/static/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="/static/css/main.css" />
+    <!--[if lte IE 9]><link rel="stylesheet" href="/static/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="/static/css/ie8.css" /><![endif]-->
   </head>
   <body>
 
@@ -56,7 +56,7 @@
 
 	<!-- Intro -->
 	<section id="intro">
-	  <a href="#" class="logo"><img src="static/images/logo.jpg" alt="" /></a>
+	  <a href="#" class="logo"><img src="/static/images/logo.jpg" alt="" /></a>
 	  <header>
 	    <h2>Storytime Fun Site</h2>
 	    <p>Write and share stories with your friends in real-time!</p>
@@ -99,12 +99,12 @@
     </div>
 
     <!-- Scripts -->
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/skel.min.js"></script>
-    <script src="static/js/util.js"></script>
-    <script src="static/js/mobile.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/skel.min.js"></script>
+    <script src="/static/js/util.js"></script>
+    <script src="/static/js/mobile.js"></script>
     <!--[if lte IE 8]><script src="static/js/ie/respond.min.js"></script><![endif]-->
-    <script src="static/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
 
   </body>
 </html>
