--- a/templates/single.html
+++ b/templates/single.html
@@ -14,7 +14,7 @@
       </div>
       <div class="meta">
 	<time class="published" datetime="2015-11-01">November 1, 2015</time>
-	<a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src="static/images/avatar.jpg" alt="" /></a>
+	<a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src="/static/images/avatar.jpg" alt="" /></a>
       </div>
     </header>
     <p>{{ post['content'] }}</p>
