--- a/templates/sideandnavbar.html
+++ b/templates/sideandnavbar.html
@@ -20,8 +20,8 @@
 	<h1><a href="/">Story Builder</a></h1>
 	<nav class="links">
 	  <ul>
-	    <li><a href="/">Your Stories</a></li>
-	    <li><a href="#">Find Stories</a></li>
+	    <li><a href="/yourstories">Your Stories</a></li>
+	    <li><a href="/find">Find Stories</a></li>
 	    <li><a href="/new">Create Story</a></li>
 	  </ul>
 	</nav>
