HOW TO USE NEW UPDATE : Add find=TRUE to the render_template call on /find to change all the urls to /edit urls. Also don't add extensions on /edit so the posts will have a form to submit new extensions. Good luck guys <3

--- a/templates/multipleposts.html
+++ b/templates/multipleposts.html
@@ -22,7 +22,13 @@
     <footer>
       <ul class="actions">
 	{% if post['url'] %}
+
+	{% if find %}
+	<li><a href={{post['url'] + "/edit"}} class="button big">Continue Reading</a></li>
+	{% else %}
 	<li><a href={{post['url']}} class="button big">Continue Reading</a></li>
+	{% endif %}
+	
 	{% else %}
 	<li><a href="#" class="button big">Continue Reading</a></li>
 	{% endif %}
