changed /edit to /extend

--- a/templates/multipleposts.html
+++ b/templates/multipleposts.html
@@ -24,7 +24,7 @@
 	{% if post['url'] %}
 
 	{% if find %}
-	<li><a href={{post['url'] + "/edit"}} class="button big">Continue Reading</a></li>
+	<li><a href={{post['url'] + "/extend"}} class="button big">Continue Reading</a></li>
 	{% else %}
 	<li><a href={{post['url']}} class="button big">Continue Reading</a></li>
 	{% endif %}
