no snakes in the grass cuz i mowed it

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,5 +1,9 @@
 {% extends "sideandnavbar.html" %}
 
+{% block username %}
+Logged in as: <b><i>{{ username }}</i></b>
+{% endblock username %}
+
 {% block content %}
 
 <!-- Main -->
