--- a/templates/single.html
+++ b/templates/single.html
@@ -1,34 +1,51 @@
 {% extends "sideandnavbar.html" %}
 
-{% block content %}
+{% if extra %}
+<p style="color:#F00">{{ extra }}</p>
+{% endif %}
 
+{% block username %}
+Logged in as: <b><i>{{ username }}</i></b>
+{% endblock username %}
+
+{% block content %}
 <!-- Main -->
 <div id="main">
-  
+
   <!-- Post -->
   <article class="post">
     <header>
       <div class="title">
-	<h2><a href="#">{{ post[ 'title' ] }}</a></h2>
+	<h2><a href="{{ '/%s/%s' % (username, post['id']) }}">{{ post[ 'title' ] }}</a></h2>
 	<p>{{ post[ 'subtitle' ] }}</p>
       </div>
       <div class="meta">
-	<time class="published" datetime="2015-11-01">November 1, 2015</time>
-	<a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src="/static/images/avatar.jpg" alt="" /></a>
+	<time class="published">{{ post["create_ts"] }}</time>
+	<a href="#" class="author"><span class="name">{{ post['author'] }}</span><img src="/static/images/avatar.jpg" alt="" /></a>
       </div>
-    </header>
-    <p>{{ post['content'] }}</p>
-    {% if extensions %}
-    
-    {% for extension in extensions %}
-    <p>{{ extensions }}</p>
-    {% endfor %}
+    </header>    
+
+    {% if hasContributed %}
+      <p>{{ post['content'] }}</p>
+      {% for extension in extensions %}
+      <hr>
+      <p>{{ extension["content"] }}</p>
+      {% endfor %}
     
     {% else %}
-    <form action={{post["url"]}} method="POST">
-      <textarea name="extension" placeholder="Your extension here"></textarea>
+      {% if extensions %}
+      <p>{{ extensions[-1]["content"] }}</p>
+      {% else %}
+      <p>{{ post["content"] }}</p>
+      {% endif %}
+
+    <form action={{ "/%s/%s" % (username, post['id']) }} method="POST">
+      <textarea name="extension" placeholder="Continue the story here"></textarea>
+      <br>
       <input type="submit" name="submit" value="Update Story">
     </form>
+    {% endif %}
+
   </article>
 
 </div>
