--- a/templates/sideandnavbar.html
+++ b/templates/sideandnavbar.html
@@ -69,7 +69,7 @@
 	<section>
 	  <div class="align-center">
 	    <header>
-	      <p>Logged in as {{ username }}</p>
+	      <p>Logged in as <b><u>{{ username }}</u></b></p>
 	    </header>
 	    <a href="/logout" class="button">Log Out</a>
 	  </div>
