--- a/templates/single.html
+++ b/templates/single.html
@@ -17,7 +17,7 @@
       </div>
       <div class="meta">
 	<time class="published">{{ post["create_ts"] }}</time>
-	<a href="#" class="author"><span class="name">{{ post['author'] }}</span><img src="/static/images/avatar.jpg" alt="" /></a>
+	<a href="#" class="author"><span class="name">{{ post['author'] }}</span><img src={{ post [ 'author_pic' ] }} alt="" /></a>
       </div>
     </header>    
 
