--- a/templates/multipleposts.html
+++ b/templates/multipleposts.html
@@ -15,7 +15,7 @@
       </div>
       <div class="meta">
 	<time class="published">{{ post["create_ts"] }}</time>
-	<a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src={{ post ['author_pic'] }} alt="" /></a>
+	<a href={{"/"~post['author']}} class="author"><span class="name">{{ post [ 'author' ] }}</span><img src={{ post ['author_pic'] }} alt="" /></a>
       </div>
     </header>
     <p> 
