--- a/templates/sideandnavbar.html
+++ b/templates/sideandnavbar.html
@@ -31,7 +31,7 @@
 	  <ul>
 	    <li class="search">
 	      <a class="fa-search" href="#search">Search</a>
-	      <form id="search" method="get" action="#">
+	      <form id="search" method="POST" action="/search">
 		<input type="text" name="query" placeholder="Search" />
 	      </form>
 	    </li>
