added # of users

--- a/templates/sideandnavbar.html
+++ b/templates/sideandnavbar.html
@@ -25,6 +25,7 @@
 	    <li><a href="/yourstories/1">Your Stories</a></li>
 	    <li><a href="/find/1">Explore</a></li>
 	    <li><a href="/new">Create Story</a></li>
+      <li>   {{count}} users and counting </li>
 	  </ul>
 	</nav>
 	<nav class="main">
@@ -74,7 +75,7 @@
 	    <a href="/logout" class="button">Log Out</a>
 	  </div>
 	</section>
-	
+
 	<!-- About -->
 	<section class="blurb">
 	  <h2>About</h2>
