--- a/templates/account.html
+++ b/templates/account.html
@@ -10,12 +10,12 @@
   <article class="post">
     <header>
       <div class="title">
-	<h2><a href="{{ '/%s/%s' % (username, post['id']) }}">{{ post[ 'title' ] }}</a></h2>
+	<h2><a href="{{ '/%s/%s' % (post['author'], post['id']) }}">{{ post[ 'title' ] }}</a></h2>
 	<p>{{ post[ 'subtitle' ] }}</p>
       </div>
       <div class="meta">
 	<time class="published">{{ post["create_ts"] }}</time>
-	<a href="#" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src={{ post ['author_pic'] }} alt="" /></a>
+	<a href="{{"/"~post['author']}}" class="author"><span class="name">{{ post [ 'author' ] }}</span><img src={{ post ['author_pic'] }} alt="" /></a>
       </div>
     </header>
     <p>
@@ -29,7 +29,7 @@
     </p>
     <footer>
       <ul class="actions">
-	<li><a href="{{ '/%s/%s' % (username, post['id']) }}" class="button big">Continue Reading</a></li>
+	<li><a href="{{ '/%s/%s' % (post['author'], post['id']) }}" class="button big">Continue Reading</a></li>
       </ul>
 
       <ul class="stats">
