--- a/templates/single.html
+++ b/templates/single.html
@@ -12,7 +12,7 @@
   <article class="post">
     <header>
       <div class="title">
-	<h2><a href="{{ '/%s/%s' % (username, post['id']) }}">{{ post[ 'title' ] }}</a></h2>
+	<h2><a href="{{ '/%s/%s' % (post['author'], post['id']) }}">{{ post[ 'title' ] }}</a></h2>
 	<p>{{ post[ 'subtitle' ] }}</p>
       </div>
       <div class="meta">
